kubernetes/monitoring/four-golden-signals/my-app/deploy/1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        imagePullPolicy: Always
        image: hoangthai9217/nginx-crud-app:latest
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 40m
            memory: 16Mi
          limits:
            cpu: 80m
            memory: 32Mi
